# bsg_manycore

./: .BSG_MANYCORE_ROOT  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile  README.contrib  README.md  rom_gen.sh
ci/: beebs.sh  coremark.sh  interrupt.sh  regress.sh  spmd.sh  surelog.sh  verilator.sh
lpddr1/: bsg_dram_ctrl_if.v  bsg_manycore_link_to_dram_ctrl.v
machines/: .gitignore  Makefile  Makefile.include  Makefile.surelog  Makefile.vcs  Makefile.verilator  Makefile.xcelium  README.md  arch_filelist.mk  core.include  core_srcs.mk  platform.mk  sim.include  sim_filelist.mk  sim_srcs.mk  sv.include  tb.include  tb_filelist.mk  tb_srcs.mk  xcelium_dump.tcl
software/: README.md
software/manycore-llvm-pass/manycore/: CMakeLists.txt  Manycore.cpp
syn/: Makefile  Makefile.dc  README.md
testbenches/: Makefile  Makefrag  README
v/: block_mem_defines.vh  block_mem_pkg.sv  bsg_1hold.v  bsg_cache_dma_to_wormhole.v  bsg_fifo_delay.v  bsg_manycore.v  bsg_manycore_accel_default.sv  bsg_manycore_accel_default.v  bsg_manycore_addr.vh  bsg_manycore_addr_pkg.v  bsg_manycore_block_mem.sv  bsg_manycore_defines.svh  bsg_manycore_defines.vh  bsg_manycore_dram_hash_function.sv  bsg_manycore_dram_hash_function.v  bsg_manycore_endpoint.sv  bsg_manycore_endpoint.v  bsg_manycore_endpoint_fc.sv  bsg_manycore_endpoint_fc.v  bsg_manycore_endpoint_standard.sv  bsg_manycore_endpoint_standard.v  bsg_manycore_endpoint_to_fifos.v  bsg_manycore_endpoint_to_fifos_pkg.v  bsg_manycore_eva_to_npa.sv  bsg_manycore_eva_to_npa.v  bsg_manycore_fsb.v  bsg_manycore_gather_scatter.sv  (+114 more)
(+1524 files in other folders)
